<resources>
    <string name="app_name">DocAppointment</string>
    <string name="homaira_ahmed_212108">Homaira Ahmed (212108)</string>
    <string name="developed_by">Developed By</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">example@gmail.com</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="user_name">User name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="logout">LogOut</string>
    <string name="chamber_appointment"><![CDATA[Chamber & Appointment]]></string>
    <string name="call_to_booking">Call to booking</string>
</resources>