<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".ui.activity.SplashActivity">


    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_developer_name"/>

    <TextView
        android:id="@+id/tv_developer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homaira_ahmed_212108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="sans-serif"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/m_progress_bar"/>

    <com.genius.multiprogressbar.MultiProgressBar
        android:id="@+id/m_progress_bar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:progressColor="@color/white"
        app:progressPadding="@dimen/_15sdp"
        app:progressPercents="8"
        app:progressSteps="3"
        app:progressWidth="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>