<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/cl_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_A700"
    tools:context=".ui.fragment.LoginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="@dimen/_40sdp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_32sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login"
        android:background="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_16sdp"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/email"
            android:textSize="@dimen/_14ssp"
            android:background="@drawable/et_bg"
            android:textColor="@color/off_white700"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_8sdp"
            android:fontFamily="@font/roboto_light"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/et_user_name"
            app:layout_constraintStart_toStartOf="@id/et_user_name"
            />

        <EditText
            android:id="@+id/et_user_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="******"
            android:textSize="@dimen/_14ssp"
            android:background="@drawable/et_bg"
            android:textColor="@color/off_white700"
            android:inputType="textPassword"
            android:padding="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_password"
            app:layout_constraintStart_toStartOf="@id/et_user_name"
            app:layout_constraintEnd_toEndOf="@id/et_user_name"
            />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:layout_marginEnd="@dimen/_8sdp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/primaryColor"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/et_user_password"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textSize="@dimen/_14ssp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:background="@drawable/bg_button"
            android:translationZ="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            app:layout_constraintStart_toStartOf="@id/et_user_password"
            app:layout_constraintEnd_toEndOf="@id/et_user_password"
            />

        <TextView
            android:id="@+id/tv_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/green_A700"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>